2009-04-28  Janus Weil  <janus@gcc.gnu.org>

PR fortran/39930
	PR fortran/39931
	* expr.c (gfc_check_pointer_assign): Correctly detect if the left hand
	side is a pointer.
	* parse.c (gfc_fixup_sibling_symbols): Don't check for ambiguity.


2009-04-28  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/39930
	PR fortran/39931
	* gfortran.dg/ambiguous_reference_2.f90: New.
	* gfortran.dg/pointer_assign_7.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146880 138bc75d-0d04-0410-961f-82ee72b054a4